bugfix: meme templates select height too small, corrected

--- a/src/App.css
+++ b/src/App.css
@@ -432,8 +432,7 @@ label {
 }
 
 #meme {
-  min-height: 50%;
-  max-height: 70%;
+  height: 70%;
   border-radius: 0.5rem;
   width: 100%;
   border: 0.1rem solid var(--secondary-color);
